Fix contact email overflow (#14723)

--- a/app/javascript/styles/mastodon/widgets.scss
+++ b/app/javascript/styles/mastodon/widgets.scss
@@ -152,7 +152,7 @@
   }
 
   & > a {
-    display: inline-block;
+    display: block;
     padding: 10px;
     padding-top: 0;
     color: $darker-text-color;
